# zero2prod

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: general.yml
migrations/: 20240223171118_create_subscriptions_table.sql
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
